# Chimera

./: .coderabbit.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  constitution.md  pyproject.toml
.antigravity/: mcp.json
.cursor/: mcp.json
.cursor/rules/: agent.mdc
.github/: copilot-instructions.md
.github/workflows/: main.yml
.specify/memory/: soul.md
docs/: ARCHITECTURE.md  LINTING.md  RESEARCH_SUMMARY.md
research/: tooling_strategy.md
scripts/: spec_check.py
skills/: README.md
skills/skill_execute_publish_intent/: README.md
skills/skill_generate_media_asset/: README.md
skills/skill_ingest_trend_feeds/: README.md
specs/: _meta.md  acceptance_criteria.md  functional.md  openclaw_integration.md  personas.md  security.md  technical.md  ui.md
tests/: test_skills_interface.py  test_trend_fetcher.py
