[project]
name = "chimera"
version = "0.1.0"
description = "Chimera is a platform for autonomous AI influencer agents that perceive online environments, generate content, interact on social platforms, and manage on-chain economic activity at scale."
readme = "README.md"
requires-python = ">=3.12.12, <4.0"
dependencies = [
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
]


[tool.pytest.ini_options]
pythonpath = "."

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Relaxed for early development
ignore_missing_imports = true
exclude = [
    "ignored/",
    ".venv/",
    "__pycache__/",
]

[tool.bandit]
exclude_dirs = ["tests", "ignored", ".venv"]
skips = ["B101"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "S",   # flake8-bandit
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # complex-structure
    "S101",  # Use of assert (needed for tests)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "S105", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
